--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-*.c++ linguist-detectable=false
-*.cmake linguist-detectable=false
+*.cpp linguist-language=Dart
+*.h linguist-language=Dart
+*.cc linguist-language=Dart
+*.cmake linguist-language=Dart
+*.txt linguist-language=Dart
